<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Media Counter</string>
    <string name="media_name_hint">Media Name</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="unlock_inc">Unlock</string>
    <string name="lock_inc">Lock</string>
    <string name="random_button_name">Random Selection</string>
    <string name="stats_button_name">Stats</string>
    <string name="episode_number">Episode Number</string>
    <string name="episode_date">Date Watched</string>
    <string name="new_text">New</string>
    <string name="ongoing_text">Ongoing</string>
    <string name="complete_text">Complete</string>
    <string name="dropped_text">Dropped</string>
    <string name="not_complete">Not Complete</string>
    <string name="add_new_media_button">Add</string>
    <string name="cancel_new_media_button">Cancel</string>
    <string name="add_new_media_label">Add a New Media Counter</string>

    <string name="action_random_media">Random Media</string>
    <string name="action_settings">Settings</string>
    <string name="action_import">Import</string>
    <string name="action_export">Export</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_version">App version</string>

    <string name="duplicate_media">Media already exists!</string>
    <string name="export_empty">Nothing to export</string>
    <string name="export_succeeded">Export succeeded</string>
    <string name="export_failed">Export failed</string>
    <string name="import_succeeded">Import succeeded</string>
    <string name="import_failed">Import failed</string>
    <string name="no_stats">No stats to show!</string>
    <string name="no_random">"No media counters to select from!"</string>
    <string name="all_media_deleted">All media counters deleted!</string>

    <string name="title_media">Media</string>
    <string name="title_episodes">Episodes</string>
    <string name="title_info">Info</string>
    <string name="title_stats">Stats</string>

</resources>
