<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/edge_padding"
        android:paddingEnd="@dimen/edge_padding"
        android:text="@string/add_new_media_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="@dimen/space_height" />

    <EditText
        android:id="@+id/media_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/media_name_hint"
        android:inputType="text"
        android:paddingStart="@dimen/edge_padding"
        android:paddingEnd="@dimen/edge_padding" />

    <Button
        android:id="@+id/add_media_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_media_button" />
</LinearLayout>

