<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/media_info_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/edge_padding"
        android:paddingEnd="@dimen/edge_padding"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="@dimen/space_height" />

    <TextView
        android:id="@+id/media_info_added_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/edge_padding"
        android:paddingEnd="@dimen/edge_padding" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/media_info_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:paddingLeft="@dimen/edge_padding"
            android:paddingRight="@dimen/edge_padding"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/media_info_status_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/edge_padding"
            android:paddingEnd="@dimen/edge_padding"
            android:text="@string/not_complete"
            android:textAlignment="center" />
    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:paddingStart="@dimen/edge_padding"
            android:paddingEnd="@dimen/edge_padding"
            android:text="@string/episode_number" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="end"
            android:paddingStart="@dimen/edge_padding"
            android:paddingEnd="@dimen/edge_padding"
            android:text="@string/episode_date" />

    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="@dimen/space_height" />

    <ListView
        android:id="@+id/media_info_ep_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"></ListView>
</LinearLayout>